<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_marginStart="28dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Answer"
        android:layout_width="351dp"
        android:layout_height="187dp"
        android:hint="@string/result"
        android:textSize="50dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonclr"
            android:layout_width="352dp"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/Clear"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_9"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_8"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_7"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonadd"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/addition"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_6"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_5"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_4"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonsub"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/subtraction"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_3"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_2"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_1"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonmult"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/multiply"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonpoint"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/dot"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button0"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/_0"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonequal"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/equals"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttondiv"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/divide"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

    </LinearLayout>


</LinearLayout>